--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <div class="game_infos">
             <span class="score"> Score : 0</span>
             <span class="time"> Temps : 0</span>
+            <span class="best_score"> Meilleur Score : 0</span>
         </div>
-        <div class="container">
-
-        </div>
+        <div class="container"></div>
     </div>
 </body>
 </html>
